# Messy-Mashup

./: .gitignore  README.md  fresh_training_from_scratch.py  infer_competition_submit.py  infer_transformers.py  inference.py  kaggle_submission.ipynb  main.py  pyproject.toml  requirements.txt  sanity_checl.py  setup.sh  submission_competition.py  train_mix_transformer.py  train_optimized_transformer.py  train_transformer.py
configs/: augmentation_config.yaml  base_config.yaml  inference_config.yaml  model_config.yaml  training_config.yaml
data/splits/: train.csv  val.csv
notebooks/: augmentation_visualization.ipynb  data_exploration.ipynb  eval_mix_val.ipynb  eval_mix_val_base.ipynb  feature_analysis.ipynb  fix_submission.ipynb  inference.ipynb  miilestone_2_notebook.ipynb  milestone_1_notebook.ipynb  milestone_3_notebook.ipynb
scripts/: build_dataset.py  evaluate.py  finetune_mix.py  finetune_mix_optimized.py  finetune_mix_retrain.py  infer_competition.py  infer_test.py  mix_only_dataset.py  retrain_mix.py  train.py  train_multibranch.py
src/augmentation/: __init__.py  gain.py  mix_stems.py  noise.py  spec_augment.py
src/data/: audio_loader.py  dataset_builder.py
src/features/: mel_spectrogram.py
src/inference/: postprocess.py  predict.py  submission_writer.py
src/models/: attention.py  crnn.py  fusion.py  loss.py  messy_mashup_model.py  stem_branch.py
src/training/: callbacks.py  metrics.py  scheduler.py  trainer.py
src/utils/: audio_utils.py  label_encoder.py  logger.py  seed.py  visualization.py
wandb/: latest-run
(+24 files in other folders)
