[project]
name = "dl-genai-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.13.0",
    "datasets>=4.8.4",
    "ipywidgets>=8.1.8",
    "librosa>=0.11.0",
    "rich>=14.3.3",
    "transformers>=5.3.0",
]
